google fonts are added : montserrat font

--- a/index.html
+++ b/index.html
@@ -8,8 +8,18 @@
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="assets/logo.png" type="image/x-icon">
 
+    <!-- google fonts are use in this project -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+
 </head>
+
 <body>
-    
+    <div class="main">
+        <div class="sidebar">sidebar</div>
+        <div class="main-content">main-content</div>
+        <div class="music-player">music-player</div>
+    </div>
 </body>
 </html>
