sticky-navbar is created

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
 <body>
     <div class="main">
+        <!-- sidebar -->
         <div class="sidebar">
             <div class="nav">
                 <div class="nav-option" style="opacity: 1;">
@@ -55,7 +56,24 @@
                 </div>
             </div>
         </div>
-        <div class="main-content">main-content</div>
+
+        <!-- main-content -->
+        <div class="main-content">
+            <div class="sticky-nav">
+                <div class="sticky-nav-icons">
+                    <img src="./assets/backward_icon.png" >
+                    <img src="./assets/forward_icon.png" class="hide" >
+                </div>
+                <div class="sticky-nav-options">
+                    <button class="badge nav-items hide">Explore Premium</button>
+                    <button class="badge nav-items dark-badge"><i class="fa-solid fa-circle-down" style="margin-right: 0.5rem;"></i>Install App</button>
+                    <i class="fa-regular fa-user nav-items"></i>
+                </div>
+            </div>
+            <div class="cards"></div>
+        </div>
+
+        <!-- music player -->
         <div class="music-player">music-player</div>
     </div>
 </body>
