--- a/index.html
+++ b/index.html
@@ -135,7 +135,10 @@
                     <p class="card-info">Your daily updates of the most played...</p>
                 </div>
             </div>
-           
+
+            <div class="footer">
+                <div class="line"></div>
+            </div>
 
         </div>
 
