--- a/index.html
+++ b/index.html
@@ -143,7 +143,46 @@
         </div>
 
         <!-- music player -->
-        <div class="music-player">music-player</div>
+        <div class="music-player">
+            <div class="album">
+                <img src="./assets/album_picture.jpeg" alt="">
+                <div class="album-text">
+                    <div>Daylight</div>
+                    <div>David kushner</div>
+                </div>
+                <div class="album-icon">
+                    <img src="./assets/album_icon1.png" alt="">
+                    <img src="./assets/album_icon2.png" style="height: 2rem;">
+                </div>
+            </div>
+            <div class="player">
+                <div class="player-controls">
+                    <img src="./assets/player_icon1.png" class="player-control-icon">
+                    <img src="./assets/player_icon2.png" class="player-control-icon">
+                    <img src="./assets/player_icon3.png" class="player-control-icon" style="opacity: 1; height: 2rem;">
+                    <img src="./assets/player_icon4.png" class="player-control-icon">
+                    <img src="./assets/player_icon5.png" class="player-control-icon">
+                </div>
+                <div class="playback-bar">
+                    <span class="curr-time">00:00</span>
+                    <input type="range" min="0" max="210" step="1" class="progress-bar">
+                    <span class="tot-time">03:33</span>
+
+                </div>
+            </div>
+            <div class="controls">
+                <img src="./assets/controls_icon1.png" style="height: 2.5rem;">
+                <img src="./assets/controld_icon2.png" style="height: 2.5rem;">
+                <img src="./assets/controls_icon3.png" style="height: 1.5rem;">
+                <img src="./assets/controls_icon4.png" style="height: 1.2rem;">
+                <img src="./assets/controls_icon5.png" class="sound-icon" style="height: 2.5rem; cursor: pointer;">
+                <input type="range" min="0" max="210" step="1" class="progress-bar sound-bar" style="width:30%;">
+
+            </div>
+        </div>
     </div>
+
+
+    <script src="script.js"></script>
 </body>
 </html>
